# ADPvCam

./: .gitignore  CMakeLists.txt
configure/: RELEASE.local
etc/: builder.py  module.ini
etc/.svn/: entries
etc/.svn/text-base/: builder.py.svn-base
etc/makeIocs/: example.xml
etc/makeIocs/.svn/: entries
etc/makeIocs/.svn/text-base/: ADAll.xml.svn-base  Makefile.iocs.svn-base  andorCCD.xml.svn-base  hdf5plugin.xml.svn-base  mar345.xml.svn-base  simDetector.xml.svn-base  winhdf5plugin.xml.svn-base
pvcamApp/Db/: pvCam.template
